--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/allegra-icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init();"></script>
+
 
 		%sveltekit.head%
 	</head>
